@@ -1,10 +1,11 @@
 package geometries;
 
 import org.junit.jupiter.api.Test;
-import primitives.Double3;
 import primitives.Point;
 import primitives.Ray;
 import primitives.Vector;
+
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -50,7 +51,7 @@ class TriangleTest {
         Triangle triangle = new Triangle(new Point(1, 0, 0), new Point(0, 1, 0), new Point(0, 0, 1));
         Point p = new Point(0, 0, 1); // A point on the triangle
 
-        // Expected normal can be on both side of triangle
+        // Expected normal
         Vector expectedNormal1 = new Vector(1, 1, 1).normalize();
         Vector expectedNormal2 = new Vector(-1, -1, -1).normalize();
 
@@ -59,10 +60,9 @@ class TriangleTest {
                 "getNormal() - The normal of the Triangle is not being calculated correctly.");
     }
 
-
     /**
-     * Test method for {@link geometries.Triangle#findIntersections(Ray)}.
-     * Verifies that the intersection with rays are correct for a given Triangle.
+     * Test method for {@link geometries.Triangle#findGeoIntersections(Ray)}.
+     * Verifies that the intersection with rays is correct for a given Triangle.
      */
     @Test
     void findIntersections() {
@@ -71,54 +71,49 @@ class TriangleTest {
                 new Point(2, 1, 0),
                 new Point(1, 2, 0)
         );
+
         Vector v = new Vector(0, 0, -1);
-        Vector v2 = new Vector(4, 2, 9);
+
         // ============ Equivalence Partitions Tests ==============
+
         // TC01: Ray intersects inside the triangle
-        var result1 = triangle.findIntersections(new Ray(new Point(1.35, 1.35, 1), v));
+        var result1 = triangle.findGeoIntersections(new Ray(new Point(1.35, 1.35, 1), v));
         assertNotNull(result1, "No intersection inside the triangle");
-        assertEquals(new Point(1.35, 1.35, 0), result1.getFirst(), "Wrong intersection point inside the triangle");
+        assertEquals(new Point(1.35, 1.35, 0), result1.get(0).point(),
+                "Wrong intersection point inside the triangle");
 
         // TC02: Ray intersects next to one of the edges
-        var result2 = triangle.findIntersections(new Ray(new Point(1.5, 0.5, 1), v));
+        var result2 = triangle.findGeoIntersections(new Ray(new Point(1.5, 0.5, 1), v));
         assertNull(result2, "Ray intersects next to one of the edges, should be no intersection");
 
         // TC03: Ray intersects next to one of the points
-        var result3 = triangle.findIntersections(new Ray(new Point(2.5, 0.75, 0), v));
+        var result3 = triangle.findGeoIntersections(new Ray(new Point(2.5, 0.75, 0), v));
         assertNull(result3, "Ray intersects next to one of the points, should be no intersection");
 
         // =============== Boundary Values Tests ==================
+
         // TC10: Ray intersects triangle edge
-        var result4 = triangle.findIntersections(new Ray(new Point(1.5, 1.5, 1), v));
+        var result4 = triangle.findGeoIntersections(new Ray(new Point(1.5, 1.5, 1), v));
         assertNull(result4, "Ray intersects triangle edge, should be no intersection");
 
         // TC20: Ray intersects triangle vertex
-        var result5 = triangle.findIntersections(new Ray(new Point(Double3.ONE), v));
-        assertNull(result5, "Ray intersects triangle point, should be no intersection");
+        var result5 = triangle.findGeoIntersections(new Ray(new Point(1, 1, 0), v));
+        assertNull(result5, "Ray intersects triangle vertex, should be no intersection");
 
-        // TC30: Ray intersects the plane on a line that continues the side of the triangle
-        var result6 = triangle.findIntersections(new Ray(new Point(3, 1, 1), v));
-        assertNull(result6, "Ray intersects the plane on a line that continues the side of the triangle, should be no intersection");
+        // TC30: Ray intersects the plane but outside the triangle
+        var result6 = triangle.findGeoIntersections(new Ray(new Point(3, 1, 1), v));
+        assertNull(result6, "Ray intersects the plane but outside the triangle, should be no intersection");
 
         // TC40: Ray parallel to triangle
-        var result7 = triangle.findIntersections(new Ray(new Point(3, 1, 1), new Vector(4, 2, 0)));
+        var result7 = triangle.findGeoIntersections(new Ray(new Point(3, 1, 1), new Vector(4, 2, 0)));
         assertNull(result7, "Ray parallel to triangle, should be no intersection");
 
         // TC50: Ray parallel inside triangle
-        var result8 = triangle.findIntersections(new Ray(new Point(1, 1, 0), new Vector(4, 2, 0)));
+        var result8 = triangle.findGeoIntersections(new Ray(new Point(1, 1, 0), new Vector(4, 2, 0)));
         assertNull(result8, "Ray parallel inside triangle, should be no intersection");
 
-        // TC60: Ray start at triangle
-        var result9 = triangle.findIntersections(new Ray(new Point(1, 1, 0), v2));
-        assertNull(result9, "Ray start inside triangle, should be no intersection");
-
-        // TC70: Ray start at triangle edge
-        var result10 = triangle.findIntersections(new Ray(new Point(1.5, 1.5, 0), v2));
-        assertNull(result10, "Ray start inside triangle, should be no intersection");
-
-        // TC80: Ray start at triangle vertex
-        var result11 = triangle.findIntersections(new Ray(new Point(1, 1, 0), v2));
-        assertNull(result11, "Ray start inside triangle, should be no intersection");
-
+        // TC60: Ray starting at the triangle and pointing away
+        var result9 = triangle.findGeoIntersections(new Ray(new Point(1, 1, 0), new Vector(0, 0, 1)));
+        assertNull(result9, "Ray starts at the triangle and points away, should be no intersection");
     }
 }
